add projeto todo list

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="./self-machine/">Self Service Machine</a></li>
         <li><a href="./working-with-forms/">Working with form</a></li>
+        <li><a href="./todo-list/">Todo List</a></li>
     </ul>
 
 </body>
